[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
jinko = { git = "https://github.com/jinko-core/jinko", default-features = false }
log = "0.4.6"
wasm-logger = "0.2.0"